add navigation bar WIP

--- a/ProiectIS-war/web/Static/index.html
+++ b/ProiectIS-war/web/Static/index.html
@@ -5,10 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>POS Static Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
     <link rel="stylesheet" type="text/css" media="screen" href="build/css/main.css" />
-    <script src="build/js/main.js"></script>
 </head>
 <body>
-    <p>this is a test</p>
+    <div class="app-container">
+        <header class="header">
+            <nav class="navigation">
+                <ul class="navigation__list">
+                    <li class="list__item hamburger">
+                        <a href="#" class="item__link">
+                            <span class="hamburger__line line1"></span>
+                            <span class="hamburger__line line2"></span>
+                            <span class="hamburger__line line3"></span>
+                        </a>
+                    </li>
+                    <li class="list__item">
+                        <a href="#" class="item__link">Delete selected</a>
+                    </li>
+                    <li class="list__item">
+                        <a href="#" class="item__link">New sale</a>
+                    </li>
+                    <li class="list__item">
+                        <a href="#" class="item__link">Select all</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <div class="main">
+            <p>test</p>
+        </div>
+    </div>
+
+    <script src="build/js/main.js"></script>
 </body>
 </html>
