--- a/ProiectIS-war/web/Static/index.html
+++ b/ProiectIS-war/web/Static/index.html
@@ -31,6 +31,7 @@
                     </li>
                 </ul>
             </nav>
+            <div class="user-icon"></div>
         </header>
         <div class="main">
             <p>test</p>
