remove old navbar design

--- a/ProiectIS-war/web/Static/index.html
+++ b/ProiectIS-war/web/Static/index.html
@@ -13,21 +13,11 @@
         <header class="header">
             <nav class="navigation">
                 <ul class="navigation__list">
-                    <li class="list__item hamburger">
-                        <a href="#" class="item__link">
-                            <span class="hamburger__line line1"></span>
-                            <span class="hamburger__line line2"></span>
-                            <span class="hamburger__line line3"></span>
-                        </a>
+                    <li class="list__item">
+                        <a href="#" class="item__link">Dashboard</a>
                     </li>
                     <li class="list__item">
                         <a href="#" class="item__link">New sale</a>
-                    </li>
-                    <li class="list__item">
-                        <a href="#" class="item__link">Select all</a>
-                    </li>
-                    <li class="list__item">
-                        <a href="#" class="item__link">Delete selected</a>
                     </li>
                 </ul>
             </nav>
