add new navigation bar

--- a/ProiectIS-war/web/Static/index.html
+++ b/ProiectIS-war/web/Static/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>POS Static Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="build/css/main.css" />
 </head>
 <body>
@@ -14,14 +14,24 @@
             <nav class="navigation">
                 <ul class="navigation__list">
                     <li class="list__item">
-                        <a href="#" class="item__link">Dashboard</a>
+                        <a href="#" class="item__link">
+                            <i class="item__icon fas fa-chart-bar"></i>
+                            <p class="item__title">Dashboard</p>
+                        </a>
                     </li>
                     <li class="list__item">
-                        <a href="#" class="item__link">New sale</a>
+                        <a href="#" class="item__link">
+                            <i class="item__icon fas fa-shopping-basket"></i>
+                            <p class="item__title">New Sale</p>
+                        </a>
                     </li>
                 </ul>
             </nav>
-            <div class="user-icon"></div>
+            <div class="user__data">
+                <div class="user__icon"></div>
+                <p class="user__name">Vlad</p>
+            </div>
+            
         </header>
         <div class="main">
             <p>test</p>
