add products list with product cards

--- a/ProiectIS-war/web/Static/index.html
+++ b/ProiectIS-war/web/Static/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>POS Static Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+        crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="build/css/main.css" />
 </head>
+
 <body>
     <div class="app-container">
         <header class="header">
@@ -31,13 +34,85 @@
                 <div class="user__icon"></div>
                 <p class="user__name">Vlad</p>
             </div>
-            
+
         </header>
         <div class="main">
-            <p>test</p>
+            <div class="products__container">
+                <ul class="products__list">
+                    <li class="product">
+                        <img src="./src/assets/images/ps4.jpg" alt="Product PS4" class="product__image">
+                        <div class="product__data">
+                            <h2 class="product__title">Consola Play Station 4 PRO</h2>
+                            <h4 class="product__code">Cod Produs: 1234</h4>
+                        </div>
+                        <div class="product__quantity">
+                            <button class="btn btn-minus fas fa-minus" type="button" name="minus"></button>
+                            <input class="quantity__input" type="text" name="quantity" value="1">
+                            <button class="btn btn-plus fas fa-plus" type="button" name="plus"></button>
+                        </div>
+                        <div class="product__price">
+                            <p class="price__label">Price</p>
+                            <p class="price__value">1899 RON</p>
+                        </div>
+                        <button class="btn btn-delete far fa-trash-alt"></button>
+                    </li>
+                    <li class="product">
+                        <img src="./src/assets/images/ps4.jpg" alt="Product PS4" class="product__image">
+                        <div class="product__data">
+                            <h2 class="product__title">Consola Play Station 4 PRO</h2>
+                            <h4 class="product__code">Cod Produs: 1234</h4>
+                        </div>
+                        <div class="product__quantity">
+                            <button class="btn btn-minus fas fa-minus" type="button" name="minus"></button>
+                            <input class="quantity__input" type="text" name="quantity" value="1">
+                            <button class="btn btn-plus fas fa-plus" type="button" name="plus"></button>
+                        </div>
+                        <div class="product__price">
+                            <p class="price__label">Price</p>
+                            <p class="price__value">1899 RON</p>
+                        </div>
+                        <button class="btn btn-delete far fa-trash-alt"></button>
+                    </li>
+                    <li class="product">
+                        <img src="./src/assets/images/ps4.jpg" alt="Product PS4" class="product__image">
+                        <div class="product__data">
+                            <h2 class="product__title">Consola Play Station 4 PRO</h2>
+                            <h4 class="product__code">Cod Produs: 1234</h4>
+                        </div>
+                        <div class="product__quantity">
+                            <button class="btn btn-minus fas fa-minus" type="button" name="minus"></button>
+                            <input class="quantity__input" type="text" name="quantity" value="1">
+                            <button class="btn btn-plus fas fa-plus" type="button" name="plus"></button>
+                        </div>
+                        <div class="product__price">
+                            <p class="price__label">Price</p>
+                            <p class="price__value">1899 RON</p>
+                        </div>
+                        <button class="btn btn-delete far fa-trash-alt"></button>
+                    </li>
+                    <li class="product">
+                        <img src="./src/assets/images/ps4.jpg" alt="Product PS4" class="product__image">
+                        <div class="product__data">
+                            <h2 class="product__title">Consola Play Station 4 PRO</h2>
+                            <h4 class="product__code">Cod Produs: 1234</h4>
+                        </div>
+                        <div class="product__quantity">
+                            <button class="btn btn-minus fas fa-minus" type="button" name="minus"></button>
+                            <input class="quantity__input" type="text" name="quantity" value="1">
+                            <button class="btn btn-plus fas fa-plus" type="button" name="plus"></button>
+                        </div>
+                        <div class="product__price">
+                            <p class="price__label">Price</p>
+                            <p class="price__value">1899 RON</p>
+                        </div>
+                        <button class="btn btn-delete far fa-trash-alt"></button>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 
     <script src="build/js/main.js"></script>
 </body>
+
 </html>
