--- a/ProiectIS-war/web/Static/index.html
+++ b/ProiectIS-war/web/Static/index.html
@@ -119,6 +119,51 @@
                 </div>
             </div>
             <div class="keypad">
+                <form action="" class="keypad__form">
+                    <input class="keypad__display" type="text" name ="keypad-display">
+                    <div class="keypad__container">
+                        <div class="numbers-container">
+                            <div class="row">
+                                <button class="btn -small">7</button>
+                                <button class="btn -small">8</button>
+                                <button class="btn -small">9</button>
+                            </div>
+                            <div class="row">
+                                <button class="btn -small">4</button>
+                                <button class="btn -small">5</button>
+                                <button class="btn -small">6</button>
+                            </div>
+                            <div class="row">
+                                <button class="btn -small">1</button>
+                                <button class="btn -small">2</button>
+                                <button class="btn -small">3</button>
+                            </div>
+                            <div class="row">
+                                <button class="btn -extra">0</button>
+                                <button class="btn -small">.</button>
+                            </div>    
+                        </div>
+                        <div class="functions-container">
+                            <button class="btn btn-delete -small">Del</button>
+                            <button class="btn btn-confirm -extra">Ent</button>
+                        </div>
+                    </div>
+                </form>
+                <div class="subtotal-container">
+                    <div class="subtotal__row">
+                        <p class="subtotal__label">Subtotal</p>
+                        <p class="subtotal__value">200000 RON</p>
+                    </div>
+                    <div class="subtotal__row">
+                        <p class="discount__label">Discount</p>
+                        <p class="discount__value">0%</p>
+                    </div>
+                </div>
+                <div class="total-container">
+                    <p class="total__label">Total</p>
+                    <p class="total__value">200000 RON</p>
+                </div>
+                <button class="btn btn-confirm">Confirm</button>
             </div>
         </div>
     </div>
