add delete buttons functionality

--- a/ProiectIS-war/web/Static/index.html
+++ b/ProiectIS-war/web/Static/index.html
@@ -153,7 +153,7 @@
                         <button class="btn" id="btn-coupons">Coupons</button>
                         <button class="btn" id="btn-drawer">Open Drawer</button>
                         <button class="btn" id="btn-cancel">Cancel Bill</button>
-                        <button class="btn btn-delete -huge" id="btn-delete-all">Delete All</button>
+                        <button class="btn btn-delete -huge js-delete-all" id="btn-delete-all">Delete All</button>
                     </div>
                 </div>
                 <div class="keypad">
