Keypad_form improvements
index automatically redirects to static webpage
keypad_display only accepts numbers
enter button and keypress should search for product(alert)

--- a/ProiectIS-war/web/Static/index.html
+++ b/ProiectIS-war/web/Static/index.html
@@ -183,7 +183,7 @@
                             </div>
                             <div class="functions-container">
                                 <button class="btn btn-delete -small">Del</button>
-                                <button class="btn btn-confirm -extra">Ent</button>
+                                <button type="button" class="btn btn-confirm -extra" id="btn-search">Ent</button>
                             </div>
                         </div>
                     </form>
